log
Wed 20 Mar 2024 08:20:25 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:37: error: expected expression before ‘)’ token
   50 |     int* dato = (int*) malloc(sizeof);
      |                                     ^
Compilation failed
24f3a0c
Wed 20 Mar 2024 08:21:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bc182e1
